Added submit btn click event

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div>
                 <h2>Search for a City:</h2>
                 <div>
-                    <input type="text">
+                    <input id="searchQuery">
                     <button id="submitBtn">Submit</button>
                 </div>
             </div>
