Added local storage functionality and initial ajax call for calling current details

--- a/index.html
+++ b/index.html
@@ -24,20 +24,13 @@
         </div>
 
         <div id="rightDiv">
-            <div>
+            <div id="testDiv">
                 <h1 id="city"></h1>
-                <p>Temp:<span id="temp"></span></p>
-                <p>Humidity:<span id="humidity"></span></p>
-                <p>UV Index:<span id="uv-index"></span></p>
+                <p>Temp: <span id="temp"></span></p>
+                <p>Humidity: <span id="humidity"></span></p>
+                <p>UV Index: <span id="uv-index"></span></p>
             </div>
-            <div>
-                <h1 id="5day">Five Day Forecast:</h1>
-                <div>
-                    <p>Date</p>
-                    <p>Icon</p>
-                    <p>Temp</p>
-                    <p>Humidity</p>
-                </div>
+            <div id="fiveDayForecast">                
             </div>
         </div>
     </div>
