Added Clear button to clear local storage

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <div id="searchDiv">
                     <input id="searchQuery">
                     <button id="submitBtn">Submit</button>
+                    <button id="clearBtn">Clear</button>
                 </div>
             </div>
             <div id="prevSearches">
